--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -1,6 +1,6 @@
 backend:
   name: git-gateway
-  branch: master
+  branch: dev
   commit_messages:
     create: 'Create {{collection}} “{{slug}}”'
     update: 'Update {{collection}} “{{slug}}”'
@@ -64,3 +64,16 @@ collections:
           - {label: Testimonials, name: testimonials, widget: list, fields: [{label: Quote, name: quote, widget: string}, {label: Author, name: author, widget: string}]}
           - {label: Full_image, name: full_image, widget: image}
           - {label: Pricing, name: pricing, widget: object, fields: [{label: Heading, name: heading, widget: string}, {label: Description, name: description, widget: string}, {label: Plans, name: plans, widget: list, fields: [{label: Plan, name: plan, widget: string}, {label: Price, name: price, widget: string}, {label: Description, name: description, widget: string}, {label: Items, name: items, widget: list}]}]}
+  
+  - name: 'testimonials' 
+    label: 'Testimonials' 
+    folder: 'app/content/testimonials' 
+    create: true slug: '{{slug}}_{{date}}' 
+    format: 'json' 
+    sort: 'published_at:desc' 
+    identifier_field: 'name' 
+    fields: 
+      - { label: 'Name', name: 'name', widget: 'string' } 
+      - { label: 'Date', name: 'date', widget: 'datetime', date_format: true, time_format: false, format: "Do MMMM YYYY", picker_utc: true } 
+      - {label: 'Testimonials', name: 'testimonial', widget: 'text} 
+      - {label: 'Homepage', name: 'homepage', widget: 'boolean', default: false}
